bioSiteStyle.css
/* Jaci Brown || CSD 340 || bioSite CSS*/

header, body, footer, .container, #navbar {
    display: block;
    font-size: 16px;
    font-family: Arial, Arial, Helvetica, sans-serif;
}
h2 {
    font-size: 20px;
}



header {
    background-color: rgb(73, 105, 137);
    color: white;
    font-weight: 400;
    padding: 10px;
}

header img {
    max-width: 100%;
}

#navbar {
    overflow: hidden;
    background-color: rgb(73, 105, 137);
    border-bottom: 15px solid black;
    
}

#navbar a {
    float: left;
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

body{
    position: relative;
    background-color: rgb(226,244, 197);
    min-height: 100%;
    margin-bottom: 10%;
   
}

.container {
    overflow: hidden;
    background-color: rgb(73,105,137);
    border-radius: 10px;
    padding: 5px;
    margin: 10px 15px;
    max-width: 100%;
    vertical-align: middle;
    
}

.card {
    float: left;
    max-width: 30%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    padding: 1%;
    border: 1px solid rgb(226,244, 197);
    margin: 1%;
    text-align: center;
}


.card_blurb{
    
    float: right;
    max-width: 60%;
    text-align: center;
    padding: 1%;

}

.card img {
    padding: 1%;
    width: 100%;
    text-align: center;
    
}

.card2 {
    
    float: right;
    max-width: 30%;
    max-height: 50%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    padding: 1%;
    border: 1px solid rgb(226,244, 197);
    margin: 1%;
    text-align: center;
    
}


.card_blurb2{
    
    float: left;
    max-width: 60%;
    text-align: center;
    padding: 1%;
}

.card2 img{
    padding: 1%;
    width: 100%;
    text-align: center;
}

.longText{
    padding:3%;
    margin: 5%;
    background-color: rgb(88, 163, 153);
    border-radius: 10px;
    line-height: 1.75em;
    
}
p {
    text-indent:30px;
}

#footer {
    position: absolute;
    margin-bottom: 0px;
    margin-top: 5%;
    padding-top: 2.5%;
    padding-right: 10px;
    background-color: rgb(73,105,137);
    width: 100%;
    height: 3%;
    text-align: right;
    
}

#footer a {
    color: white;
    text-decoration: none;
}

